# od_pedal

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.ps1
.github/workflows/: ci.yml
src/: CMakeLists.txt
src/dsp/: OverdriveDSP.cpp  OverdriveDSP.h
src/plugin/: CustomLookAndFeel.cpp  CustomLookAndFeel.h  LEDIndicator.cpp  LEDIndicator.h  PluginEditor.cpp  PluginEditor.h  PluginParameters.cpp  PluginParameters.h  PluginProcessor.cpp  PluginProcessor.h
